improve sdg content in home page
improve sdg content home page and UI improvement

--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -544,3 +544,13 @@ table .on-hover:hover .underline {
 .text-xs{
   font-size: 0.8rem;
 }
+
+.sdg-container {
+  font-size: 16px;
+}
+
+#sdgImages img {
+  padding: 0;
+  width: 100%;
+  height: auto;
+}
