--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -32,12 +32,12 @@
                           </ul>
                         </ul>
                     </li>
-                    <form class="d-flex justify-content-center" role="search">
-                        <div class="col-auto"></div>
-                        <input class="form-control me-2 col-8" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                        <div class="col-auto"></div>
-                    </form>
+                    <div class="col-xl-5 col-lg-3 col-md-3">
+                        <form class="d-flex justify-content-center" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
                 {% endif %}
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
