Fix checkbox colour on dark theme and JS reconstruction - Login page
Fixed the checkbox colour bug on dark theme in the login page by modifying the css. Also, created a new js file for login page to seperate the js file from the site.js

--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -187,9 +187,9 @@
     border-color: #fff;
 }
 
-    .dark_mode #customCheck.form-check-input {
-        background-color: #333;
-    }
+.dark_mode .form-check-input {
+    background-color: #333;
+}
 
 .dark_mode .small {
     color: #fff;
