--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="form-check mb-3">
                                         {{ form.become_seller(class="form-check-input", id="customCheck") }}
-                                        {{ form.become_seller.label(class="form-check-label") }}
+                                        {{ form.become_seller.label(class="form-check-label", for="customCheck") }}
                                         {% for error in form.become_seller.errors %}
                                             <span class="text-danger">{{ error }}</span>
                                         {% endfor %}
