profile-page-functionality-jinja
update profile page for its format using jinja template.

--- a/app/templates/layout/alert_modal.html
+++ b/app/templates/layout/alert_modal.html
@@ -1,7 +1,11 @@
+{% if not divId %}
+    {% set divId = '#AlertModalDiv' %}
+{% endif %}
+
 {% with errors = get_flashed_messages(category_filter=["error"]) %}
     {% if errors or (form and form.errors) %}
         <div class="alert alert-danger alert-dismissible">
-            <button type="button" class="close" aria-hidden="true" onclick="CloseAlertDiv('#AlertModalDiv')">&times;</button>
+            <button type="button" class="close" aria-hidden="true" onclick="CloseAlertDiv('{{divId}}')">&times;</button>
             <h4><i class="icon fa fa-ban me-2"></i>Failed</h4>
             {% for msg in errors %}
                 <div class="mb-1">{{ msg }}</div>
@@ -20,7 +24,7 @@
 {% with successes = get_flashed_messages(category_filter=["success"]) %}
     {% if successes %}
         <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" aria-hidden="true" onclick="CloseAlertDiv('#AlertModalDiv')">&times;</button>
+            <button type="button" class="close" aria-hidden="true" onclick="CloseAlertDiv('{{divId}}')">&times;</button>
             <h4><i class="icon fa fa-check me-2"></i>Success</h4>
             {% for msg in successes %}
                 <div class="mb-1">{{ msg }}</div>
