--- a/app/templates/users/profile.html
+++ b/app/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Product {% endblock %}
+{% block title %}Profile {% endblock %}
 
 {% block content %}
     <div class="container mt-5">
@@ -16,30 +16,34 @@
                         </div>
                         <form class="row g-3">
                             <div class="col-md-6">
-                              <label for="firstName" class="form-label">First Name:</label>
-                              <input type="text" class="form-control" id="inputEmail4" value="Taylor" disabled>
+                                {{ form.first_name.label(class="form-label", for="firstName") }}
+                                {{ form.first_name(class="form-control",disabled=True) }}
                             </div>
                             <div class="col-md-6">
-                              <label for="lastName" class="form-label">Last Name:</label>
-                              <input type="text" class="form-control" id="inputPassword4" value="Swift" disabled>
+                                {{ form.last_name.label(class="form-label", for="lastName") }}
+                                {{ form.last_name(class="form-control", disabled=True) }}
                             </div>
                             <div class="col-12">
-                              <label for="emailAddress" class="form-label">Email Address:</label>
-                              <input type="email" class="form-control" id="emailAddress" value="taylor@example.com" disabled>
+                                {{ form.email.label(class="form-label", for="email") }}
+                                {{ form.email(class="form-control", disabled=True) }}
                             </div>
                             <div class="col-9">
-                              <label for="address" class="form-label">Address:</label>
-                              <input type="text" class="form-control" id="address" value="65 Stirling Highway" disabled>
+                                {{ form.address.label(class="form-label", for="address") }}
+                                {{ form.address(class="form-control", disabled=True) }}
                             </div>
                             <div class="col-md-3">
-                              <label for="postcode" class="form-label">Postcode:</label>
-                              <input type="number" class="form-control" id="postcode" value="6000" disabled>
+                                {{ form.postcode.label(class="form-label", for="postcode") }}
+                                {{ form.postcode(class="form-control", disabled=True) }}
                             </div>
                             <div class="col-mb-3">
-                                <label for="accountType" class="form-label">Account Type:</label>
+                                {{ form.account_type.label(class="form-label", for="accountType") }}
                             <div class="input-group">
-                                <span class="input-group-text" id="accountCheck"><i class="verified fa-regular fa-circle-check" title="Verified"></i></span>
-                                <input type="text" class="form-control" placeholder="User/Seller/User & Seller" aria-label="accountTypes" aria-describedby="accountType" readonly disabled>
+                                {% if verified %}
+                                    <span class="input-group-text" id="accountCheck"><i class="verified fa-regular fa-circle-check" title="Verified"></i></span>
+                                {% else %}
+                                    <span class="input-group-text" id="accountCheck"><i class="unverified fa-regular fa-circle-check" title="Verified"></i></span>
+                                {% endif %}
+                                {{ form.account_type(class="form-control", disabled=True) }}
                               </div>
                             </div>
                             <div class="col-12">
@@ -50,10 +54,13 @@
                                     </label>
                                 </div>
                                 <div class="collapse" id="sellerForm">
+                                    <div id="AlertModalDiv">
+                                      {% include "/layout/alert_modal.html" %}
+                                    </div>
                                     <form class="p-4">
                                         <div class="mb-3">
                                             <label for="exampleCheckboxFormPassword" class="form-label">Confirm Your Password:</label>
-                                            <input type="password" class="form-control" id="sellerPassword" placeholder="Password">
+                                            {{ form.confirm_password(type="password", class="form-control mb-3", id="deactivatePassword", placeholder="Your Password") }}
                                         </div>
                                         <div class="mb-3">
                                             <div class="form-check form-check-reverse">
@@ -63,7 +70,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary" id="confirmSelletBtn">Submit</button>
+                                        {{ form.submit(class="btn btn-primary", id="confirmSelletBtn") }}
                                     </form>
                                 </div>
                             </div>                            
@@ -90,15 +97,21 @@
                     </h5>
                     <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <p>Please enter your password to confirm account deactivation:</p>
-                    <input type="password" class="form-control mb-3" id="deactivatePassword" placeholder="Your Password">
-                    <p>CAUTION: Your profile will be permanently deleted and cannot be recovered.</p>
+                <div data-id="deactivate_AlertModalDiv">
+                    {% set divId = 'deactivate_AlertModalDiv' %}
+                  {% include "/layout/alert_modal.html" %}
                 </div>
-                <div class="modal-footer d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button class="btn btn-primary me-md-2" type="button" data-bs-dismiss="modal">Close</button>
-                    <button class="btn btn-danger" type="button" id="confirmDeactivateBtn">Deactivate</button>
-                </div>
+                <form action="/deactivate"  method="POST">
+                    <div class="modal-body">
+                        <p>Please enter your password to confirm account deactivation:</p>
+                        {{ form.deactivate_password(type="password", class="form-control mb-3", id="deactivatePassword", placeholder="Your Password") }}
+                        <p>CAUTION: Your profile will be permanently deleted and cannot be recovered.</p>
+                    </div>
+                    <div class="modal-footer d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button class="btn btn-primary me-md-2" type="button" data-bs-dismiss="modal">Close</button>
+                        {{ form.submit(class="btn btn-danger", type="button", id="confirmDeactivateBtn") }}
+                    </div>
+                </form>
             </div>
         </div>
     </div>
