--- a/app/templates/seller/product_table_child.html
+++ b/app/templates/seller/product_table_child.html
@@ -39,11 +39,11 @@
                 <div class="col-12">
                     <div class="col mr-2 mb-2">
                         <div class="text-uppercase mb-1">Created By</div>
-                        <span> {{ pro.createdBy }} </span>
+                        <span> {{ pro.owners }} </span>
                     </div>
                     <div class="col mr-2">
                         <div class="text-uppercase mb-1">Created On</div>
-                        <span> {{ pro.createdOn.strftime('%Y-%m-%d %H:%M:%S') }} </span>
+                        <span> {{ pro.created_on.strftime('%Y-%m-%d %H:%M:%S') }} </span>
                     </div>
                 </div>
             </div>
