product order form FE changes.
fixed
- change add_product page input to dropdown
- dropdown dark site
- modify js to improve user experience
- signup form missing address and postcode
enhanced
- product_detailed page full functionality

--- a/app/templates/product/product.html
+++ b/app/templates/product/product.html
@@ -3,6 +3,11 @@
 {% block title %}Product {% endblock %}
 
 {% block content %}
+    <div class="container">
+        <div id="AlertModalDiv">
+            {% include "/layout/alert_modal.html" %}
+        </div>
+    </div>
     {% include "/product/product_display.html" %}
 {% endblock %}
 
