--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -299,6 +299,7 @@
     background-color: #555;
     color: #fff;
     border-color: #777;
+    --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23dee2e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
 }
 
     .dark_mode .form-select option {
