--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -26,7 +26,7 @@
                     </span>
                     <span class="standard-form-value">
                         <div class="input-group">
-                            {{ form.category(class="form-control") }}
+                            {{ form.category(class="form-select") }}
                             {% for error in form.category.errors %}
                                 <span class="text-danger">{{ error }}</span>
                             {% endfor %}
@@ -53,7 +53,7 @@
                     </span>
                     <span class="standard-form-value">
                         <div class="input-group">
-                            {{ form.condition(class="form-control") }}
+                            {{ form.condition(class="form-select") }}
                             {% for error in form.condition.errors %}
                                 <span class="text-danger">{{ error }}</span>
                             {% endfor %}
