--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -60,13 +60,35 @@
                                             <span class="text-danger">{{ error }}</span>
                                         {% endfor %}
                                     </div>
-
                                     <div class="form-group">
                                         {{ form.email_address.label(class="form-control-label") }}
                                         {{ form.email_address(class="form-control form-control-user") }}
                                         {% for error in form.email_address.errors %}
                                             <span class="text-danger">{{ error }}</span>
                                         {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form.contact_no.label(class="form-control-label") }}
+                                        {{ form.contact_no(class="form-control form-control-user") }}
+                                        {% for error in form.contact_no.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-9">
+                                            {{ form.address.label(class="form-control-label", for="address") }}
+                                            {{ form.address(class="form-control form-control-user") }}
+                                            {% for error in form.address.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                            {% endfor %}
+                                        </div>
+                                        <div class="col-md-3">
+                                            {{ form.postcode.label(class="form-control-label", for="postcode") }}
+                                            {{ form.postcode(class="form-control form-control-user") }}
+                                            {% for error in form.postcode.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                            {% endfor %}
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         {{ form.password.label(class="form-control-label") }}
