--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -86,13 +86,10 @@
             <div class="standard-form-table-column">
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        {{ form.description.label }}
+                        Description
                     </span>
                     <span class="standard-form-value">
-                        {{ form.description(class="form-control mh-100", type="number",id="remark",rows="3",placeholder="Enter Description",style="height: 100px;") }}
-                        {% for error in form.description.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
+                        <textarea class="form-control mh-100" id="remark" rows="3" placeholder="Enter Description" style="height: 100px;"></textarea>
                     </span>
                 </div>
                 <div class="standard-form-row">
