--- a/app/templates/seller/product_table.html
+++ b/app/templates/seller/product_table.html
@@ -37,7 +37,7 @@
                             {% for pro in products %}
                                 {% set inputChecked = "" %}
                                 {% set status = "Off" %}
-                                {% if pro.isActive %}
+                                {% if pro.is_active %}
                                     {% set inputChecked = "checked" %}
                                     {% set status = "On" %}
                                 {% endif %}
