--- a/app/templates/users/profile.html
+++ b/app/templates/users/profile.html
@@ -12,7 +12,7 @@
                             <h1>Your Profile</h1>
                         </div>
                         <div class="text-center mb-4">
-                            <i class="fa-rounded fa-solid fa-user-secret fa-4x"></i>
+                            <i class="fa-rounded fa-solid {{ form.avatar_icon.data }} fa-4x"></i>
                         </div>
                         {% if not form.errors %}
                             <div id="AlertModalDiv">
